Redis integration.